--- a/index.ipynb
+++ b/index.ipynb
@@ -50,15 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy import *\n",
     "\n",
-    "\n",
-    "Base = None"
+    "Base = declarative_base()"
    ]
   },
   {
@@ -72,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.orm import relationship"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,56 +110,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Customer(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'customer'\n",
     "    \n",
-    "    id = None\n",
-    "    name = None\n",
-    "    cart_id = None\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    name = Column(String)\n",
+    "    cart_id = Column(Integer, ForeignKey('shoppingCart.id'))\n",
     "    \n",
     "    # Create 1-to-1 relationship with ShoppingCart, as shown in the SQLAlchemy documentation\n",
-    "    shoppingCart = None\n"
+    "    shoppingCart = relationship('ShoppingCart', uselist=False, back_populates='customer')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ShoppingCart(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'shoppingCart'\n",
     "    \n",
-    "    id = None\n",
-    "    item_id = None\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    item_id = Column(Integer, ForeignKey('item.id'))\n",
     "    # Create 1-to-1 relationship with Customer\n",
-    "    customer = None\n",
+    "    customer = relationship('Customer',uselist=False,back_populates='shoppingCart')\n",
     "    # Create 1-to-many relationship with Item\n",
-    "    items = None"
+    "    items = relationship('Item')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Item(Base):\n",
-    "    __tablename__ = None\n",
+    "    __tablename__ = 'item'\n",
     "    \n",
-    "    id = None\n",
-    "    description = None\n",
-    "    price = None"
+    "    id = Column(Integer, primary_key=True)\n",
+    "    description = Column(String)\n",
+    "    price = Column(Float)\n",
+    "    "
    ]
   },
   {
@@ -181,13 +175,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-10 22:08:47,833 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-02-10 22:08:47,850 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-10 22:08:47,852 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-02-10 22:08:47,852 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-10 22:08:47,853 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"customer\")\n",
+      "2019-02-10 22:08:47,854 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-10 22:08:47,856 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"shoppingCart\")\n",
+      "2019-02-10 22:08:47,857 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-02-10 22:08:47,858 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"item\")\n",
+      "2019-02-10 22:08:47,859 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    }
+   ],
    "source": [
-    "engine = None\n",
+    "engine = create_engine('sqlite:///shopping_cart.db',echo=True)\n",
+    "Base.metadata.create_all(engine)\n",
     "\n"
    ]
   },
@@ -206,10 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "customer1 = Customer(name=\"Jane\")\n",
@@ -227,11 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "customer1.id, item1.id"
    ]
@@ -257,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy.orm import sessionmaker\n",
     "\n",
-    "Session = None\n",
+    "Session = sessionmaker(bind=engine)\n",
     "\n",
-    "session = None"
+    "session = Session()"
    ]
   },
   {
@@ -280,13 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "session.add_all(None)"
+    "session.add_all([customer1,cart1,item1])"
    ]
   },
   {
@@ -298,12 +313,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'IdentitySet' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-278c133ca5e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'IdentitySet' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "session.new()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,12 +343,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-02-10 22:13:38,723 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2019-02-10 22:13:38,725 INFO sqlalchemy.engine.base.Engine INSERT INTO item (description, price) VALUES (?, ?)\n",
+      "2019-02-10 22:13:38,726 INFO sqlalchemy.engine.base.Engine ('widget', 9.99)\n",
+      "2019-02-10 22:13:38,728 INFO sqlalchemy.engine.base.Engine INSERT INTO \"shoppingCart\" (item_id) VALUES (?)\n",
+      "2019-02-10 22:13:38,729 INFO sqlalchemy.engine.base.Engine (1,)\n",
+      "2019-02-10 22:13:38,730 INFO sqlalchemy.engine.base.Engine INSERT INTO customer (name, cart_id) VALUES (?, ?)\n",
+      "2019-02-10 22:13:38,730 INFO sqlalchemy.engine.base.Engine ('Jane', 1)\n",
+      "2019-02-10 22:13:38,731 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.commit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,12 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer1.id"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,18 +406,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -376,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
